--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,7 @@ dmypy.json
 # Assignment-1
 Assignment-1/.idea
 Assignment-1/Submission
+
+# Assignment-2
+Assignment-2/.idea
+Assignment-2/Submission
