--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,7 @@ Assignment-1/Submission
 # Assignment-2
 Assignment-2/.idea
 Assignment-2/Submission
+
+# Assignment-3
+Assignment-3/.idea
+Assignment-3/Submission
