--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,7 @@ Assignment-2/Submission
 # Assignment-3
 Assignment-3/.idea
 Assignment-3/Submission
+
+# Assignment-4
+Assignment-4/.idea
+Assignment-4/Submission
